[package]
edition = "2021"
name = "todo"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7.0"
actix-web = "4.1.0"
askama = "0.11.1"
r2d2 = "0.8.9"
r2d2_sqlite = "0.20.0"
rusqlite = {version = "0.27.0", features = ["bundled"]}
serde = {version = "1.0.137", features = ["derive"]}
thiserror = "1.0.31"
